apps/sonarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  labels:
    network-homepage-ingress: "true"
