apps/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.20
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
            seccompProfile:
              type: "RuntimeDefault"
          readinessProbe:
            httpGet:
              path: /ping
              port: 8989
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8989
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: sonarr-media-cover
              mountPath: /config/MediaCover
            - name: sonarr-media
              mountPath: /media
            - name: sonarr-seedbox
              mountPath: /downloads
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: sonarr-config
          emptyDir: {}
        - name: sonarr-media-cover
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: sonarr-media
          persistentVolumeClaim:
            claimName: sonarr-media-pvc
        - name: sonarr-seedbox
          persistentVolumeClaim:
            claimName: sonarr-seedbox-pvc
        - name: tmp
          emptyDir: {}
