apps/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-lan
  namespace: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.wevelsiep.com`)
      kind: Rule
      services:
        - name: sonarr
          port: 80
